# determined-wozniak

./: CMakeLists.txt  README.md  build.sh
incl/: framebuffer.h  map.h  player.h  sprite.h  textures.h  tinyraycaster.h  utils.h
src/: framebuffer.cpp  gui.cpp  tinyraycaster.cpp
